# unet

./: .bumpversion.toml  .gitignore  .pylintrc  .travis.yml  .zenodo.json  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  justfile  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_unet.py
unet/: __init__.py  cli.py  conv.py  decoding.py  encoding.py  unet.py
unet/tests/: test_unet.py
